# sing-box-launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.installer.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/proto/: started_service.proto
src-tauri/src/: accent.rs  app_update.rs  clash.rs  config.rs  core_update.rs  crash.rs  elevation.rs  error.rs  groups.rs  lib.rs  logbus.rs  main.rs  manager.rs  native_api.rs  proxy.rs  settings.rs  tray.rs
src/components/: JsonEditor.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useReveal.ts
src/i18n/: strings.ts
src/lib/: colorEngine.ts  format.ts
src/pages/: Config.tsx  Connections.tsx  Dashboard.tsx  Logs.tsx  Proxies.tsx  Settings.tsx
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
